# Naomi

./: .env.example  .gitignore  .pre-commit-config.yaml  __main__.py  pyproject.toml  requirements.txt  vercel.json
naomi/: __init__.py
naomi/middlewares/: auth.py
naomi/models/: __init__.py  actions.py  challenges.py  truthordare.py  users.py
naomi/routes/: __init__.py  actions.py  admin.py  challenges.py  pages.py  truthordare.py  users.py
naomi/static/css/: prism.css  style.css
naomi/static/js/: prism.js
naomi/templates/: actions.html  base.html  challenges.html  error.html  index.html  not-found.html
naomi/utils/: limiter.py  responses.py  router.py
tests/: test_naomi.py
